SUBDIRS = protocols
EXTRA_DIST = accounts.png \
		add.xpm				\
		angel.xpm			\
		arrow_down.xpm			\
		arrow_right.xpm			\
		away.png			\
		away_big.xpm			\
		bigsmile.xpm			\
		block.xpm			\
		broken.xpm			\
		burp.xpm			\
		cancel.xpm			\
		close.xpm			\
		connect.png			\
		crazy4.xpm			\
		crossedlips.xpm			\
		cry.xpm				\
		download.xpm			\
		edit.png			\
		embarrassed.xpm			\
		farted.xpm			\
		fontface2.xpm			\
		gaim.png			\
		gaim_cool.png			\
		gaim_error.png			\
		gaim_info.png			\
		gaim_question.png		\
		gaim_warning.png		\
		gnome_add.xpm			\
		gnome_preferences.xpm		\
		gnome_remove.xpm 		\
		group.xpm			\
		insert-image-small.png \
		insert-link-small.png \
		insert-smiley-small.png \
		join.xpm			\
		kiss.xpm			\
		login_icon.xpm			\
		logo.png		\
		logo.xpm			\
		logout_icon.xpm			\
		logout_menu.xpm			\
		luke03.xpm			\
		moneymouth.xpm			\
		mrt.xpm				\
		msgpend.png			\
		msgunread.png			\
		no_icon.xpm			\
		offline.png			\
		ok.xpm				\
		oneeye.xpm			\
		online.png			\
		panic.xpm			\
		preferences.png	\
		refresh.xpm			\
		sad.xpm				\
		save.xpm			\
		scream.xpm			\
		signon.png \
		smile.xpm			\
		smile8.xpm			\
		status-away.xpm			\
		status-game.xpm			\
		status-here.xpm			\
		status-idle.xpm			\
		tb_forward.xpm			\
		tb_redo.xpm			\
		tb_refresh.xpm			\
		tb_search.xpm	\
		tb_undo.xpm			\
		text_bigger.png			\
		text_normal.png	\
		text_smaller.png		\
		think.xpm			\
		tmp_send.xpm			\
		tongue.xpm			\
		warn.xpm			\
		wink.xpm			\
		yell.xpm			


gaimbuttonpixdir = $(datadir)/pixmaps/gaim/buttons
gaimbuttonpix_DATA = edit.png accounts.png signon.png preferences.png insert-image-small.png text_bigger.png text_smaller.png insert-link-small.png insert-smiley-small.png text_normal.png

gaimdialogpixdir = $(datadir)/pixmaps/gaim/dialogs
gaimdialogpix_DATA = gaim_error.png gaim_info.png gaim_question.png gaim_warning.png gaim_cool.png

gaimmenupixdir = $(datadir)/pixmaps/gaim/menus
gaimmenupix_DATA = insert-image-small.png

gaimdistpixdir = $(datadir)/pixmaps/gaim
gaimdistpix_DATA = away.png connect.png msgpend.png offline.png online.png msgunread.png logo.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = gaim.png


