SUBDIRS = protocols smileys
EXTRA_DIST =	about_menu.png \
		accounts.png \
		accounts-menu.png \
		add.xpm				\
		arrow_down.xpm			\
		arrow_right.xpm			\
		away.png			\
		away_big.xpm			\
		block.xpm			\
		broken.xpm			\
		cancel.xpm			\
		change-bgcolor-small.png \
		change-fgcolor-small.png \
		close.xpm			\
		connect.png			\
		edit.png			\
		fontface2.xpm			\
		gaim.png			\
		gaim_cool.png			\
		gaim_error.png			\
		gaim_info.png			\
		gaim_question.png		\
		gaim_warning.png		\
		gnome_add.xpm			\
		gnome_preferences.xpm		\
		gnome_remove.xpm 		\
		group.xpm			\
		import-menu.png \
		insert-image-small.png \
		insert-link-small.png \
		insert-smiley-small.png \
		join.xpm			\
		login_icon.xpm			\
		logo.png		\
		logo.xpm			\
		logout_icon.xpm			\
		msgpend.png			\
		msgunread.png			\
		no_icon.xpm			\
		offline.png			\
		ok.xpm				\
		online.png			\
		panic.xpm			\
		preferences.png	\
		refresh.xpm			\
		save.xpm			\
		signon.png \
		status-away.xpm			\
		status-game.xpm			\
		status-here.xpm			\
		status-idle.xpm			\
		tb_forward.xpm			\
		tb_redo.xpm			\
		tb_refresh.xpm			\
		tb_search.xpm	\
		tb_undo.xpm			\
		text_bigger.png			\
		text_normal.png	\
		text_smaller.png		\
		tmp_send.xpm			\
		warn.xpm			


gaimbuttonpixdir = $(datadir)/pixmaps/gaim/buttons
gaimbuttonpix_DATA = edit.png accounts.png change-bgcolor-small.png change-fgcolor-small.png signon.png preferences.png insert-image-small.png text_bigger.png text_smaller.png insert-link-small.png insert-smiley-small.png text_normal.png

gaimdialogpixdir = $(datadir)/pixmaps/gaim/dialogs
gaimdialogpix_DATA = gaim_error.png gaim_info.png gaim_question.png gaim_warning.png gaim_cool.png

gaimmenupixdir = $(datadir)/pixmaps/gaim/menus
gaimmenupix_DATA = insert-image-small.png about_menu.png import-menu.png accounts-menu.png insert-link-small.png

gaimdistpixdir = $(datadir)/pixmaps/gaim
gaimdistpix_DATA = away.png connect.png msgpend.png offline.png online.png msgunread.png logo.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = gaim.png


